[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Autofeat"
version = "0.0.1"
requires-python = ">=3.10"
# readme = {file = "README.md", context-type= "text/markdown"}
# authors = [
#     {name = "Zeger Mouw", email = "z.f.mouw@student.tudelft.nl"}
# ]
dependencies = [
    "autogluon == 1.1.1",
    "deprecation == 2.1.0",
    "ITMO-FS == 0.3.3",
    "joblib == 1.2.0",
    "matplotlib == 3.7.3",
    "neo4j == 4.4.0",
    "notebook == 6.4.5",
    "numpy >= 1.24.4",
    "pandas == 2.1.4",
    "qpsolvers[daqp] == 4.3.0",
    "scikit-learn == 1.4.0",
    "seaborn == 0.11.2",
    "streamlit == 1.39.0",
    "streamlit_pandas_profiling == 0.1.3",
    "streamlit-navigation-bar == 3.3.0",
    "streamlit-pydantic == 0.6.1rc3",
    "st-link-analysis == 0.3.0",
    "tqdm == 4.64.0",
    "typer == 0.9.0",
    "watchdog==5.0.3",
    "uv==0.4.17",
    "polars>=1.9.0",
    "valentine>=0.2.1",
]

[project.urls]
Documentation = "https://autofeat.readthedocs.io/en/latest/"
Repository = "https://github.com/delftdata/hci-auto-feat"
